# orb

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
src/: lib.rs  main.rs  particle_gen.rs  wavefunction.rs
src/graphics/: camera.rs  icosahedron.rs  mod.rs  render.rs  vertex.rs
src/graphics/shaders/: shader.wgsl
src/shaders/: shader.wgsl
