[package]
name = "orblib"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[[bin]]
name = "orbbin"
path = "src/main.rs"

[dependencies]
#  
scilib = "1.0.0"
num = "0.4.3"

## wgpu rendering stuff
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11"
log = "0.4"
wgpu = "26.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18.0"
instant = "0.1.13"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}


